<resources>
    <string name="app_name">Widget for Trello™</string>

    <!-- config activity -->
    <string name="title_activity_config">Choose List</string>
    <string name="board">Board</string>
    <string name="list">List</string>
    <string name="loading_message">Wait a second…</string>

    <!-- card activity -->
    <string name="title_activity_card">Card Details</string>

    <!-- widget -->
    <string name="board_hint">Board name</string>
    <string name="list_hint">List name</string>
    <string name="no_cards">No more cards!</string>
    <string name="refresh">Refresh list cards</string>
    <string name="config">Change widgets list</string>

    <string name="card_title">Card title</string>

    <string name="card_subscribed_desc">You are subscribed to this card</string>
    <string name="card_desc_desc">Card has description</string>
    <string name="comments_desc">Comments</string>
    <string name="votes_desc">Votes</string>
    <string name="attachments_desc">Attachments</string>
    <string name="checklist_desc">Checklist items</string>
    <string name="due_date_desc">Due date</string>
    <string name="zero">0</string>

    <!-- login frags -->
    <string name="hello_world">Hello!\nTo begin, please sign in to your Trello account.</string>
    <string name="login">Lets go</string>
    <string name="singed">Signed in as %s</string>
    <string name="logout">Logout</string>

    <!-- color pref -->
    <string name="pref_title_copy_from_card">Copy from %s</string>

    <!-- error -->
    <string name="http_fail">Trello http request failed: %s</string>
    <string name="login_fail">Login failed multiple times. Logging you out: %s</string>
    <string name="board_load_fail">Could not load board data.\nPlease make sure you are logged in and try again.\n\nError was: %s</string>

</resources>
